--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name</title> <!-- Replace with your name -->
+  <title>Emily Oliphant</title> <!-- Replace with your name -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -117,29 +117,28 @@
         <div class="info">
           <h1 class="name">Your Name</h1>
           <ul class="position-list">
-            <!-- Replace these list items with your actual postdoc/education info -->
-            <li>[Current postdoc position]</li>
-            <li>[Previous PhD / institution]</li>
-            <li>[Any other key education or role]</li>
+            <li>Tayebati Postdoctoral Fellow at MIT</li>
+            <li>Ph.D. at University of Michgian in Materials Science and Engineering and Scientific Computing</li>
+            <li>B.S Physics at Idaho State University</li>
           </ul>
         </div>
 
         <div class="photo-wrapper">
-          <!-- Replace "images/your-photo.jpg" with the actual path to your photo -->
-          <img src="images/your-photo.jpg" alt="Photo of Your Name">
+          <img src="images/emily2025.jpg" alt="Photo of Your Name">
         </div>
       </section>
 
       <!-- One paragraph about you -->
       <section class="about">
         <!-- Replace this placeholder with one paragraph about you -->
-        <p>[One paragraph about you goes here. Write about your research interests, current position, and what you work on.]</p>
+        <p>I am a postdoc working at MIT with Prof. Tess Smidt and Prof. Jeffery Grossman to build chemical frameworks for quantum mechanics of materials which improves machine learning architectures and simplifies training. 
+
+My scientific interests center around decoding complicating quantum simulations into chemical intuition frameworks to reveal the covalent, ionic, and metallic bonds which conspire to shape in material properties.</p>
       </section>
 
       <!-- One sentence about COGITO + link to website -->
       <section class="cogito">
-        <!-- Replace this placeholder with one sentence about COGITO and link to its website -->
-        <p>[One sentence about COGITO with a link to its website goes here.]</p>
+        <p>During my PhD, I creating the toolkit Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO). This combined the devleopment of novel algorithms to parse DFT wavefunctions into an adaptable, maximally unique atomic basis with a powerful user inferface to visualization bonding and charge transfer in crystals. For more information, check out the <a href="https://olipemil.github.io/cogito-website/">COGITO website</a> or the <a href="https://olipemil.github.io/COGITO/">COGITO paper</a>. COGITO was created in the <a href="https://whsunresearch.group/">Sun group</a> and <a href="https://kioupakisgroup.engin.umich.edu/">Kioupakis group</a> at University of Michigan.</p>
       </section>
     </div>
   </div>
