--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
       <!-- Top section: name + positions (left) and photo (right) -->
       <section class="top-section">
         <div class="info">
-          <h1 class="name">Your Name</h1>
+          <h1 class="name">Emily Oliphant</h1>
           <ul class="position-list">
             <li>Tayebati Postdoctoral Fellow at MIT</li>
-            <li>Ph.D. at University of Michgian in Materials Science and Engineering and Scientific Computing</li>
+            <li>Ph.D. Materials Science and Engineering and Scientific Computing at University of Michigan</li>
             <li>B.S Physics at Idaho State University</li>
           </ul>
         </div>
