--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     }
 
     .photo-wrapper img {
-      max-width: 220px;
+      max-width: 300px;
       width: 100%;
       height: auto;
-      border-radius: 8px;
+      border-radius: 4px;
       object-fit: cover;
     }
 
@@ -119,7 +119,7 @@
           <ul class="position-list">
             <li>Tayebati Postdoctoral Fellow at MIT</li>
             <li>Ph.D. Materials Science and Engineering and Scientific Computing at University of Michigan</li>
-            <li>B.S Physics at Idaho State University</li>
+            <li>B.S. Physics at Idaho State University</li>
           </ul>
         </div>
 
@@ -138,7 +138,7 @@ My scientific interests center around decoding complicating quantum simulations 
 
       <!-- One sentence about COGITO + link to website -->
       <section class="cogito">
-        <p>During my PhD, I creating the toolkit Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO). This combined the devleopment of novel algorithms to parse DFT wavefunctions into an adaptable, maximally unique atomic basis with a powerful user inferface to visualization bonding and charge transfer in crystals. For more information, check out the <a href="https://olipemil.github.io/cogito-website/">COGITO website</a> or the <a href="https://olipemil.github.io/COGITO/">COGITO paper</a>. COGITO was created in the <a href="https://whsunresearch.group/">Sun group</a> and <a href="https://kioupakisgroup.engin.umich.edu/">Kioupakis group</a> at University of Michigan.</p>
+        <p>During my PhD, I creating the toolkit Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO). This combined the devleopment of novel algorithms to parse DFT wavefunctions into an adaptable, maximally unique atomic basis with a powerful user inferface to visualization bonding and charge transfer in crystals. For more information, check out the <a href="https://olipemil.github.io/cogito-website/">COGITO website</a> or the <a href="https://arxiv.org/abs/2511.19725">COGITO paper</a>. COGITO was created in the <a href="https://whsunresearch.group/">Sun group</a> and <a href="https://kioupakisgroup.engin.umich.edu/">Kioupakis group</a> at University of Michigan.</p>
       </section>
     </div>
   </div>
