--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     .photo-wrapper {
-      flex: 0 0 220px;
+      flex: 0 0 300px;
       display: flex;
       justify-content: center;
     }
@@ -131,14 +131,16 @@
       <!-- One paragraph about you -->
       <section class="about">
         <!-- Replace this placeholder with one paragraph about you -->
-        <p>I am a postdoc working at MIT with Prof. Tess Smidt and Prof. Jeffery Grossman to build chemical frameworks for quantum mechanics of materials which improves machine learning architectures and simplifies training. 
-
-My scientific interests center around decoding complicating quantum simulations into chemical intuition frameworks to reveal the covalent, ionic, and metallic bonds which conspire to shape in material properties.</p>
+        <p>I am a postdoc working at MIT with Prof. Tess Smidt and Prof. Jeffery Grossman to build better representations of quantum materials data. This increases our chemical understanding of materials properties while improving machine learning architectures for simplified training. 
+My scientific interests center around decoding complicated quantum simulations into chemically intuition frameworks to reveal the covalent, ionic, and metallic bonds which conspire to shape in material properties.</p>
       </section>
 
       <!-- One sentence about COGITO + link to website -->
       <section class="cogito">
-        <p>During my PhD, I creating the toolkit Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO). This combined the devleopment of novel algorithms to parse DFT wavefunctions into an adaptable, maximally unique atomic basis with a powerful user inferface to visualization bonding and charge transfer in crystals. For more information, check out the <a href="https://olipemil.github.io/cogito-website/">COGITO website</a> or the <a href="https://arxiv.org/abs/2511.19725">COGITO paper</a>. COGITO was created in the <a href="https://whsunresearch.group/">Sun group</a> and <a href="https://kioupakisgroup.engin.umich.edu/">Kioupakis group</a> at University of Michigan.</p>
+        <p>During my PhD, I creating the toolkit Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO). 
+This combined the devleopment of novel algorithms to parse DFT wavefunctions into an adaptable, maximally unique atomic basis with a powerful user inferface to visualization bonding and charge transfer in crystals. 
+For more information, check out the <a href="https://olipemil.github.io/cogito-website/">COGITO website</a> or the <a href="https://arxiv.org/abs/2511.19725">COGITO paper</a>. 
+COGITO was created in the <a href="https://whsunresearch.group/">Sun group</a> and <a href="https://kioupakisgroup.engin.umich.edu/">Kioupakis group</a> at University of Michigan.</p>
       </section>
     </div>
   </div>
