--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <li>Tayebati Postdoctoral Fellow at MIT</li>
             <li>Ph.D. Materials Science and Engineering and Scientific Computing at University of Michigan</li>
             <li>B.S. Physics at Idaho State University</li>
+            <p>I am a postdoc working at MIT with Prof. Tess Smidt and Prof. Jeffery Grossman to build better representations of quantum materials data. This increases our chemical understanding of materials properties while improving machine learning architectures for simplified training.</p>
           </ul>
         </div>
 
@@ -131,8 +132,7 @@
       <!-- One paragraph about you -->
       <section class="about">
         <!-- Replace this placeholder with one paragraph about you -->
-        <p>I am a postdoc working at MIT with Prof. Tess Smidt and Prof. Jeffery Grossman to build better representations of quantum materials data. This increases our chemical understanding of materials properties while improving machine learning architectures for simplified training. 
-My scientific interests center around decoding complicated quantum simulations into chemically intuition frameworks to reveal the covalent, ionic, and metallic bonds which conspire to shape in material properties.</p>
+        <p>My scientific interests center around decoding complicated quantum simulations into chemically intuition frameworks to reveal the covalent, ionic, and metallic bonds which conspire to shape in material properties.</p>
       </section>
 
       <!-- One sentence about COGITO + link to website -->
